@@ -18,9 +18,11 @@ package org.apache.lucene.analysis.ja.tokenAttributes;
 
 import java.util.List;
 
+import net.java.sen.dictionary.Morpheme;
+
 import org.apache.lucene.util.Attribute;
 
 public interface ReadingsAttribute extends Attribute {
   public List<String> getReadings();
-  public void setReadings(List<String> readings);
+  public void setMorpheme(Morpheme morpheme);
 }
